# fork_pycalima

./: .gitignore  README.rst  pyproject.toml  setup.py
examples/: read_ble.py
pycalima/: Calima.py  __init__.py
tests/: test_calima_protocol.py
