[project]
name = "pycalima"
version = "3.0.0"
description = "Async protocol helpers for Pax Calima-like BLE fans"
readme = "README.rst"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Patrick Wadstrom" }]
dependencies = []

[project.optional-dependencies]
ble = ["bleak"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pycalima"]
